# Copyright (c) 2001, 2002 Steven Knight
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.09 - 

 From Chad Austin:

  - Add a Prepend() method to Environments, to append values to
    the beginning of construction variables.

 From Charles Crain and Steven Knight:

  - Add Repository() functionality, including the -Y option.

  - Allow $$ in a string to be passed through as $.

  - Support file names with odd characters in them.

 From Matt Balvin:

 - Add long command-line support to the "lib" (MicroSoft static library)
   Tool, too.

 From Steven Knight:

 - Fix auto-deduction of target names so that deduced targets end
   up in the same subdirectory as the source.

 - Don't remove source files specified on the command line!

 - Suport the Intel Fortran Compiler (ifl.exe).

 - Supply an error message if there are no command-line or
   Default() targets specified.

  - Fix the ASPPCOM values for the GNU assembler.
    (Bug reported by Brett Polivka.)

  - Fix an exception thrown when a Default() directory was specified
    when using the -U option.

  - Issue a warning when -c can't remove a target.

  - Eliminate unnecessary Scanner calls by checking for the
    existence of a file before scanning it.  (This adds a generic
    hook to check an arbitrary condition before scanning.)

  - Add explicit messages to tell when we're "Reading SConscript files
    ...," "done reading SConscript files," "Building targets," and
    "done building targets."  Add a -Q option to supress these.

  - Add separate $SHOBJPREFIX and $SHOBJSUFFIX construction variables
    (by default, the same as $OBJPREFIX and $OBJSUFFIX).

  - Add Make-like error messages when asked to build a source file,
    and before trying to build a file that doesn't have all its source
    files (including when an invalid drive letter is used on WIN32).

 From Steven Knight and Anthony Roach:
